tests/ui/rfcs/rfc-0000-never_patterns/diverges-not.stderr
error[E0308]: mismatched types
  --> $DIR/diverges-not.rs:12:26
   |
LL | fn wild_void(_: Void) -> u32 {}
   |    ---------             ^^^ expected `u32`, found `()`
   |    |
   |    implicitly returns `()` as its body has no tail or `return` expression

error[E0308]: mismatched types
  --> $DIR/diverges-not.rs:17:5
   |
LL | /     unsafe {
LL | |
LL | |         let _ = *ptr;
LL | |     }
   | |_____^ expected `u32`, found `()`

error[E0308]: mismatched types
  --> $DIR/diverges-not.rs:27:18
   |
LL |             _ => {}
   |                  ^^ expected `u32`, found `()`

error[E0308]: mismatched types
  --> $DIR/diverges-not.rs:32:30
   |
LL | fn binding_void(_x: Void) -> u32 {}
   |    ------------              ^^^ expected `u32`, found `()`
   |    |
   |    implicitly returns `()` as its body has no tail or `return` expression

error[E0308]: mismatched types
  --> $DIR/diverges-not.rs:37:5
   |
LL | /     unsafe {
LL | |
LL | |         let _x = *ptr;
LL | |     }
   | |_____^ expected `u32`, found `()`

error[E0308]: mismatched types
  --> $DIR/diverges-not.rs:47:19
   |
LL |             _x => {}
   |                   ^^ expected `u32`, found `()`

error[E0308]: mismatched types
  --> $DIR/diverges-not.rs:54:37
   |
LL |     if let true = true && let ! = x {}
   |                                     ^^ expected `u32`, found `()`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0308`.
